--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "hummus": "^1.0.105",
+    "jimp": "^0.8.4",
     "multer": "^1.4.2",
     "nodemon": "^1.19.2"
   }
