nginx-filesize fixed

--- a/client/nginx_config/default.conf
+++ b/client/nginx_config/default.conf
@@ -1,6 +1,7 @@
 
 
   server {
+    client_max_body_size 100M;
     location / {
         root /var/www/html;
         try_files $uri $uri/ /index.html;
