--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,7 @@ http {
 
     server {
         listen 9000;
+        client_max_body_size 100M;
         access_log /var/log/nginx/access.log compression;
 
         location / {
